Java25対応